--- a/psc/templates/psc/contact_edit.html
+++ b/psc/templates/psc/contact_edit.html
@@ -13,9 +13,16 @@
 		{% csrf_token %}
 		<div class="block">
 		    <table class="observer_details">
-      <tr><td>Location:</td>
-			
-			<td><strong>{% if contact.role == 'NSC' or contact.role == 'NS' or contact.role == 'SC' or contact.role == 'SDC' %}Unknown{% endif %}{% if contact.role == 'LGA' %}{{ contact.location.name }}{% endif %}{% if contact.role == 'OBS' %}{{ contact.location.parent.name }}{% endif %}</strong> - {% if contact.role == 'NSC' or contact.role == 'NS' or contact.role == 'SC' or contact.role == 'SDC' %}{{ contact.location.name }}{% endif %}{% if contact.role == 'LGA' %}{{ contact.location.parent.parent.name }}{% endif %}{% if contact.role == 'OBS' %}{{ contact.location.parent.parent.parent.name }}{% endif %} - {% if contact.role == 'NSC' or contact.role == 'NS' or contact.role == 'SC' or contact.role == 'SDC' %}{{ contact.location.parent.name }}{% endif %}{% if contact.role == 'LGA' %}{{ contact.location.parent.parent.parent.name }}{% endif %}{% if contact.role == 'OBS' %}{{ contact.location.parent.parent.parent.parent.name }}{% endif %}</td>
+			<tr><td>Location:</td>
+			    <td><strong>{% if contact.role == 'NSC' or contact.role == 'NS' or contact.role == 'SC' or contact.role == 'SDC' %}Unknown{% endif %}
+					{% if contact.role == 'LGA' %}{{ contact.location.name }}{% endif %}
+					{% if contact.role == 'OBS' %}{{ contact.location.parent.name }}{% endif %}</strong> -
+					{% if contact.role == 'NSC' or contact.role == 'NS' or contact.role == 'SC' or contact.role == 'SDC' %}{{ contact.location.name }}{% endif %}
+					{% if contact.role == 'LGA' %}{{ contact.location.parent.parent.name }}{% endif %}
+					{% if contact.role == 'OBS' %}{{ contact.location.parent.parent.parent.name }}{% endif %} -
+					{% if contact.role == 'NSC' or contact.role == 'NS' or contact.role == 'SC' or contact.role == 'SDC' %}{{ contact.location.parent.name }}{% endif %}
+					{% if contact.role == 'LGA' %}{{ contact.location.parent.parent.parent.name }}{% endif %}
+					{% if contact.role == 'OBS' %}{{ contact.location.parent.parent.parent.parent.name }}{% endif %}</td>
 			</tr>
 			<tr><td width="30%">Observer ID:</td><td><strong>{{ contact.observer_id }}</strong></td></tr>
 			<tr><td width="30%">Name:</td><td><input type="text" class="bigbox" name="name" value="{{ contact.name }}" /></td></tr>
