Addition of new files and Modifications. Several files were added to contain the various parameters for the newly introduces EDAY category. Other old files were then modified to allow the EDAY feature on the application. The process of modification would however continue considering the perculiarity of the EDAY category.

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -70,6 +70,17 @@
 														{% endif %}
                         </ul>
                     </li>
+		    <li>
+                        <a href="{% url psc.views.eday_checklist_list %}">Election Day </a>
+                        <ul>
+                            <li>
+                                <a href="{% url psc.views.eday_checklist_list %}">Checklist</a>
+                            </li>
+                            <li>
+                                <a href="{% url psc.views.eday_incident_list %}">Incidents</a>
+                            </li>
+                        </ul>
+                    </li>
 		     <li>
                         <a href="{% url psc.views.contact_list %}">Contact List</a>
                     </li>
