fixed typos for contacts management and separated the messaging tool into a separate file

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -82,7 +82,7 @@
                         </ul>
                     </li>
 		     <li>
-                        <a href="{% url psc.views.contact_list %}">Contact List</a>
+                        <a href="{% url psc.views.contact_list %}">Contacts Management</a>
                     </li>
 		     
                     <li class=" secondary logout">
