--- a/psc/templates/psc/contact_list.html
+++ b/psc/templates/psc/contact_list.html
@@ -44,7 +44,7 @@
 {% block content %}
 <div class="grid_16">
     <div class="box">
-        <h2>Contact List<span class="flag">
+        <h2>Contacts List<span class="flag">
             <button onclick="location.href='{% url psc.views.contact_list %}'">Refresh</button>
 	{% if perms.psc.can_analyse %}<button id="sndmsg_btn">Send Message</button>{% endif %}
         </span></h2>
@@ -71,14 +71,7 @@
                         </tbody>
                     </table>
                 </form>
-		<div id="messenger" style="display:none">
-		    <table>
-		    <tr>
-			<td style="vertical-align:top;padding-left:1em" width="150">You are about to send to <strong>{{ msg_recipients|length|default:"0" }}</strong> recipients</td>
-			<td width="250"><input type="hidden" name="to" value="{{ msg_recipients|join:"," }}" id="to" /><textarea id="msg" cols="30" rows="5"></textarea><br /><button id="send_btn">Send</button> <img style="display:none" src="/assets/img/ajax-loader.gif" alt="sending..." id="ajax-loader" /></td>
-		    </tr>
-		    </table>
-		</div>
+		{% include "psc/messenger.html" %}
             </div>
             <table>
                 <thead>
