--- a/psc/templates/psc/contact_edit.html
+++ b/psc/templates/psc/contact_edit.html
@@ -24,9 +24,9 @@
 					{% if contact.role == 'LGA' %}{{ contact.location.parent.parent.parent.name }}{% endif %}
 					{% if contact.role == 'OBS' %}{{ contact.location.parent.parent.parent.parent.name }}{% endif %}</td>
 			</tr>
-			<tr><td width="30%">Observer ID:</td><td><strong>{{ contact.observer_id }}</strong></td></tr>
+			<tr><td width="30%">PSC ID:</td><td><strong>{{ contact.observer_id }}</strong></td></tr>
 			<tr><td width="30%">Name:</td><td><input type="text" class="bigbox" name="name" value="{{ contact.name }}" /></td></tr>
-			<tr><td>Observer Phone No.:</td><td><input type="text" class="bigbox" name="{{ form.phone.name }}" value="{{ form.initial.phone  }}" /></td></tr>
+			<tr><td>Observer Phone No.:</td><td><input type="text" class="bigbox" name="{{ form.phone.name }}" value="{{ form.initial.phone|default:""  }}" /></td></tr>
 			<tr><td>E-mail:</td><td><input type="text" class="bigbox" name="{{ form.email.name }}" value="{{ form.initial.email }}" /></td></tr>
 			<tr><td>Partner:</td>
 			<td>
