--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -14,6 +14,74 @@
                 </form>
                 </div>
                 <table width="100%" class="dashboard">
+		    <tr>
+			 <td width="50%">
+                            <div class="box compartment">
+                                <h2 class="dashboard-header"><a href="#">EDAY Checklists </a></h2>
+                                 <div class="dash-row">
+                                     <div class="dash-column first">1st SMS</div>
+                                     <div class="dash-column second">
+                                         <span class="missing">{{ missing_first_sms|default:"0" }}</span>                                         
+                                         <span class="complete">{{ received_first_sms|default:"0" }}</span>
+                                     </div>
+                                </div>
+                                 <div class="dash-row">
+                                     <div class="dash-column first">2nd SMS</div>
+                                     <div class="dash-column second">
+                                         <span class="missing">{{ missing_second_sms|default:"0" }}</span>
+                                         <span class="unverified">{{ unverified_second_sms|default:"0" }}</span>
+                                         <span class="incomplete">{{ incomplete_second_sms|default:"0" }}</span>
+                                         <span class="not_open">{{ not_open_second_sms|default:"0" }}</span>                                         
+                                         <span class="complete">{{ complete_second_sms|default:"0" }}</span>
+                                     </div>
+                                </div>
+                                 <div class="dash-row">
+                                     <div class="dash-column first">3rd SMS</div>
+                                     <div class="dash-column second">
+                                         <span class="blank">{{ blank_third_sms|default:"0" }}</span>
+                                         <span class="missing">{{ missing_third_sms|default:"0" }}</span>
+                                         <span class="unverified">{{ unverified_third_sms|default:"0" }}</span>
+                                         <span class="incomplete">{{ partial_third_sms|default:"0" }}</span>                                         
+                                         <span class="not_open">{{ not_open_third_sms|default:"0" }}</span>                                         
+                                         <span class="complete">{{ complete_third_sms|default:"0" }}</span>
+                                     </div>
+                                </div>
+				<div class="dash-row">
+                                     <div class="dash-column first">4th SMS</div>
+                                     <div class="dash-column second">
+                                         <span class="blank">{{ blank_third_sms|default:"0" }}</span>
+                                         <span class="missing">{{ missing_third_sms|default:"0" }}</span>
+                                         <span class="unverified">{{ unverified_third_sms|default:"0" }}</span>
+                                         <span class="incomplete">{{ partial_third_sms|default:"0" }}</span>                                         
+                                         <span class="not_open">{{ not_open_third_sms|default:"0" }}</span>                                         
+                                         <span class="complete">{{ complete_third_sms|default:"0" }}</span>
+                                     </div>
+                                </div>
+                                <div class="dash-row last">
+                                     <div class="dash-text"> <a href="{% url psc.views.vr_checklist_list %}">(View All)</a></div>
+                                </div>
+                                <div class="clear"></div>
+                            </div>
+                            <div class="clear"></div>
+                        </td>
+			<td>
+			    <div class="box compartment">
+                                <h2 class="dashboard-header"><a href="#">EDAY Incidents</a></h2>
+                                <div class="dash-row">
+                                     <div class="dash-column first">Incidents rec'd today</div>
+                                     <div class="dash-column second"><span>{{ dco_incidents_today }}</span></div>
+                                </div>                                
+                                 <div class="dash-row">
+                                     <div class="dash-column first">Total incidents rec'd</div>
+                                     <div class="dash-column second"><span>{{ dco_incidents_count }}</span></div>
+                                </div>
+                                <div class="dash-row last">
+                                     <div class="dash-text"><a href="{% url psc.views.dco_incident_add %}">(Add Incident)</a> | <a href="{% url psc.views.dco_incident_list %}">(View All)</div>
+                                </div>
+                                <div class="clear"></div>
+                            </div>
+			</td>
+		    </tr>
                     <tr>
                         <td width="50%">
                             <div class="box compartment">
