--- a/psc/templates/psc/contact_list.html
+++ b/psc/templates/psc/contact_list.html
@@ -115,7 +115,7 @@
 			{% if observer.role == 'LGA' %}
 			<td>{{ observer.location.parent.parent.name}}</td>
 			{% endif %}
-			{% if observer.role == 'RC' %}
+			{% if observer.role == 'OBS' %}
 			<td>{{ observer.location.parent.parent.parent.name}}</td>
 			{% endif %}
 			{% if observer.role == 'NSC' or observer.role == 'NS' or observer.role == 'SC' %}
