Modification contact_list.html was modified to allow for reset of filter fields.

--- a/psc/templates/psc/contact_list.html
+++ b/psc/templates/psc/contact_list.html
@@ -11,6 +11,8 @@
             $("#id_role").val("");
             $("#id_observer_id").val("");
 	    $("#id_partner").val("");
+	    $("#id_lga").val("");
+	    $("#id_district").val("");
             $("#filter_form").submit();
         });
 	$("#sndmsg_btn").toggle(function () {
