--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -1,8 +1,40 @@
 {% extends "psc/layout.html" %}
+{% block javascripts %}
+  <script src="/assets/js/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" charset="utf-8">
+    var timeout = 5000;
+    var enabled = false;
+    
+    $(document).ready(function () {
+      setTimeout('refreshDashboard()', timeout);
+      $("#auto_refresh").toggle(
+        function () {
+          enabled = true;
+          $('#auto_refresh').html('Auto Refresh: On');
+        },
+        function () {
+          enabled = false;
+          $('#auto_refresh').html('Auto Refresh: Off');
+        }
+      );
+    });
+    
+    function refreshDashboard() {
+      if (enabled) {
+        $.getJSON('/ajax_stats', function (data) {
+          $.each(data, function(i, n) {
+            $('#'+i).html(n);
+          });
+        });
+      }
+      setTimeout('refreshDashboard()', timeout);
+    }
+  </script>
+{% endblock %}
 {% block content %}
     <div class="grid_16">
         <div class="box">
-            <h2>Dashboard <span class="flag"><button onclick="location.href='{% url psc.views.home %}'">Refresh</button></span></h2>
+            <h2>Dashboard <span class="flag"><button id="auto_refresh">Auto Refresh: Off</button><button onclick="location.href='{% url psc.views.home %}'">Refresh</button></span></h2>
             <div class="box dashboard">
                 <div class="controls">
                
@@ -81,29 +113,29 @@
                                  <div class="dash-row">
                                      <div class="dash-column first">1st SMS</div>
                                      <div class="dash-column second">
-                                         <span class="missing">{{ missing_first_sms|default:"0" }}</span>                                         
-                                         <span class="complete">{{ received_first_sms|default:"0" }}</span>
+                                         <span class="missing" id="vr_missing_first_sms">{{ missing_first_sms|default:"0" }}</span>                                         
+                                         <span class="complete" id="vr_received_first_sms">{{ received_first_sms|default:"0" }}</span>
                                      </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">2nd SMS</div>
                                      <div class="dash-column second">
-                                         <span class="missing">{{ missing_second_sms|default:"0" }}</span>
-                                         <span class="unverified">{{ unverified_second_sms|default:"0" }}</span>
-                                         <span class="incomplete">{{ incomplete_second_sms|default:"0" }}</span>
-                                         <span class="not_open">{{ not_open_second_sms|default:"0" }}</span>                                         
-                                         <span class="complete">{{ complete_second_sms|default:"0" }}</span>
+                                         <span class="missing" id="vr_missing_second_sms">{{ missing_second_sms|default:"0" }}</span>
+                                         <span class="unverified" id="vr_unverified_second_sms">{{ unverified_second_sms|default:"0" }}</span>
+                                         <span class="incomplete" id="vr_incomplete_second_sms">{{ incomplete_second_sms|default:"0" }}</span>
+                                         <span class="not_open" id="vr_not_open_second_sms">{{ not_open_second_sms|default:"0" }}</span>                                         
+                                         <span class="complete" id="vr_complete_second_sms">{{ complete_second_sms|default:"0" }}</span>
                                      </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">3rd SMS</div>
                                      <div class="dash-column second">
-                                         <span class="blank">{{ blank_third_sms|default:"0" }}</span>
-                                         <span class="missing">{{ missing_third_sms|default:"0" }}</span>
-                                         <span class="unverified">{{ unverified_third_sms|default:"0" }}</span>
-                                         <span class="incomplete">{{ partial_third_sms|default:"0" }}</span>                                         
-                                         <span class="not_open">{{ not_open_third_sms|default:"0" }}</span>                                         
-                                         <span class="complete">{{ complete_third_sms|default:"0" }}</span>
+                                         <span class="blank" id="vr_blank_third_sms">{{ blank_third_sms|default:"0" }}</span>
+                                         <span class="missing" id="vr_missing_third_sms">{{ missing_third_sms|default:"0" }}</span>
+                                         <span class="unverified" id="vr_unverified_third_sms">{{ unverified_third_sms|default:"0" }}</span>
+                                         <span class="incomplete" id="vr_partial_third_sms">{{ partial_third_sms|default:"0" }}</span>                                         
+                                         <span class="not_open" id="vr_not_open_third_sms">{{ not_open_third_sms|default:"0" }}</span>                                         
+                                         <span class="complete" id="vr_complete_third_sms">{{ complete_third_sms|default:"0" }}</span>
                                      </div>
                                 </div>
                                 <div class="dash-row last">
@@ -120,18 +152,18 @@
                                 <div class="dash-row">
                                     <div class="dash-column first">Arrival Texts</div>
                                     <div class="dash-column second">
-																				<span class="missing">{{ dco_not_arrived|default:"0" }}</span>
-                                        <span class="complete">{{ dco_arrived|default:"0" }}</span>
+																				<span class="missing" id="dco_not_arrived">{{ dco_not_arrived|default:"0" }}</span>
+                                        <span class="complete" id="dco_arrived">{{ dco_arrived|default:"0" }}</span>
 																		</div>
                                 </div>
                                 <div class="dash-row">
                                     <div class="dash-column first">Checklist Reports</div>
                                     <div class="dash-column second">
-                                         <span class="missing">{{ dco_missing|default:"0" }}</span>
-                                         <span class="unverified">{{ dco_not_open_problem|default:"0" }}</span>
-                                         <span class="incomplete">{{ dco_partial|default:"0" }}</span>
-                                         <span class="not_open">{{ dco_not_open|default:"0" }}</span>                                         
-                                         <span class="complete">{{ dco_complete|default:"0" }}</span>
+                                         <span class="missing" id="dco_missing">{{ dco_missing|default:"0" }}</span>
+                                         <span class="unverified" id="dco_not_open_problem">{{ dco_not_open_problem|default:"0" }}</span>
+                                         <span class="incomplete" id="dco_partial">{{ dco_partial|default:"0" }}</span>
+                                         <span class="not_open" id="dco_not_open">{{ dco_not_open|default:"0" }}</span>                                         
+                                         <span class="complete" id="dco_complete">{{ dco_complete|default:"0" }}</span>
 																		</div>
                                 </div>
                                 <div class="dash-row last">
@@ -149,11 +181,11 @@
                                 <h2 class="dashboard-header"><a href="#">VR Incidents</a></h2>
                                 <div class="dash-row">
                                      <div class="dash-column first">Incidents rec'd today</div>
-                                     <div class="dash-column second"><span>{{ vr_incidents_today }}</span></div>
+                                     <div class="dash-column second"><span id="vr_incidents_today">{{ vr_incidents_today }}</span></div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">Total incidents rec'd</div>
-                                     <div class="dash-column second"><span class="dash-num">{{ vr_incidents_count }}</span></div>
+                                     <div class="dash-column second"><span class="dash-num" id="vr_incidents_count">{{ vr_incidents_count }}</span></div>
                                 </div>
                                 <div class="dash-row last">
                                      <div class="dash-text"><a href="{% url psc.views.vr_incident_add %}">(Add Incident)</a> <span class="divider">|</span> <a href="{% url psc.views.vr_incident_list %}">(View All)</a></div>
@@ -167,11 +199,11 @@
                                 <h2 class="dashboard-header"><a href="#">DCO Incidents</a></h2>
                                 <div class="dash-row">
                                      <div class="dash-column first">Incidents rec'd today</div>
-                                     <div class="dash-column second"><span>{{ dco_incidents_today }}</span></div>
+                                     <div class="dash-column second"><span id="dco_incidents_today">{{ dco_incidents_today }}</span></div>
                                 </div>                                
                                  <div class="dash-row">
                                      <div class="dash-column first">Total incidents rec'd</div>
-                                     <div class="dash-column second"><span>{{ dco_incidents_count }}</span></div>
+                                     <div class="dash-column second"><span id="dco_incidents_count">{{ dco_incidents_count }}</span></div>
                                 </div>
                                 <div class="dash-row last">
                                      <div class="dash-text"><a href="{% url psc.views.dco_incident_add %}">(Add Incident)</a> | <a href="{% url psc.views.dco_incident_list %}">(View All)</div>
