File Modification and Group Creation A new group ext administrator was created. This group would be able to only view dashboard and checklists lights to be able to help track unrecieved sms. Necessary files within the template where then modified to restrict access to certain features on the page and same was done for the views.py. Changes are still likely to be made in the nearest future.

--- a/psc/templates/psc/contact_list.html
+++ b/psc/templates/psc/contact_list.html
@@ -152,7 +152,7 @@
 			<td>{{ observer.email }}</td>
                         <td>{{ observer.role }}</td>
 			<td>{{ observer.partner }}</td>
-                        <td><a href="{% url psc.views.contact_edit observer.id %}">Edit</a></td>
+                        {% if perms.psc.can_analyse %}<td><a href="{% url psc.views.contact_edit observer.id %}">Edit</a></td>{% endif %}
                     </tr>
 				{% empty %}
                     <tr>
