--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -182,7 +182,8 @@
 											{% endif %}
 										{% endif %}
                     </td>
-                    <td><a href="{% url psc.views.vr_checklist cl.id %}">Edit</a></td>
+                    {% if perms.psc.can_manage_data %}<td><a href="{% url psc.views.vr_checklist cl.id %}">Edit</a></td>{% endif %}
+
                 </tr>
 				{% empty %}
                 <tr>
