--- a/psc/templates/psc/eday_checklist_list.html
+++ b/psc/templates/psc/eday_checklist_list.html
@@ -114,7 +114,7 @@
                             <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 							{% endif %}
                         </td>
-                        <td><a href="{% url psc.views.eday_checklist cl.id %}">Edit</a></td>
+                        {% if perms.psc.can_analyse %}<td><a href="{% url psc.views.eday_checklist cl.id %}">Edit</a></td>{% endif %}
                     </tr>
 				{% empty %}
                     <tr>
